[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/FIGHTMODE/B_Fightmode/Resources/BottomMenu/Macaron/Macaron_Action_256x256.png" type="Texture" id=1]
[ext_resource path="res://Scenes/FIGHTMODE/B_Fightmode/Resources/BottomMenu/Macaron/Macaron.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/Theme_SmallAugusta18.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Fonts/Theme_VerySmallAugusta14.tres" type="Theme" id=4]
[ext_resource path="res://Scenes/FIGHTMODE/B_Fightmode/Resources/BottomMenu/Macaron/Macaron_Fond_64x64.png" type="Texture" id=5]
[ext_resource path="res://Scenes/FIGHTMODE/B_Fightmode/Resources/BottomMenu/Macaron/Macaron_Melee_vide_64x64.png" type="Texture" id=6]
[ext_resource path="res://Scenes/FIGHTMODE/B_Fightmode/Resources/BottomMenu/Macaron/Macaron_Distance_vide_64x64.png" type="Texture" id=7]
[ext_resource path="res://Scenes/FIGHTMODE/B_Fightmode/Resources/BottomMenu/Macaron/Macaron_Magie_vide_64x64.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Activation"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -160 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2.5, 2.5 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Activation"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 128, -104 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2.5, 2.5 ) ]
}

[node name="Macaron" type="Sprite"]
position = Vector2( 1408, 16 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Mac_Label" type="Label" parent="."]
margin_left = -64.0
margin_right = 64.0
margin_bottom = 32.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Kills"
align = 1
valign = 1

[node name="Mac_LabelCounter" type="Label" parent="."]
margin_left = -64.0
margin_top = 32.0
margin_right = 64.0
margin_bottom = 64.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 1, 0.572549, 0.321569, 1 )
text = "Counterstrike"
align = 1
valign = 1

[node name="MacaronFond_Melee" type="Sprite" parent="."]
position = Vector2( 0, 128 )
texture = ExtResource( 5 )

[node name="Macaron_Melee" type="Sprite" parent="MacaronFond_Melee"]
modulate = Color( 0.941176, 0.941176, 0.941176, 1 )
z_index = 1
texture = ExtResource( 6 )

[node name="AnimPlayer_MacMelee" type="AnimationPlayer" parent="MacaronFond_Melee/Macaron_Melee"]
anims/Activation = SubResource( 1 )

[node name="MacaronFond_Distance" type="Sprite" parent="."]
position = Vector2( -128, 64 )
texture = ExtResource( 5 )

[node name="Macaron_Distance" type="Sprite" parent="MacaronFond_Distance"]
modulate = Color( 0.941176, 0.941176, 0.941176, 1 )
z_index = 1
texture = ExtResource( 7 )

[node name="AnimPlayer_MacRange" type="AnimationPlayer" parent="MacaronFond_Distance/Macaron_Distance"]
anims/Activation = SubResource( 2 )

[node name="MacaronFond_Magie" type="Sprite" parent="."]
position = Vector2( 128, 64 )
texture = ExtResource( 5 )

[node name="Macaron_Magie" type="Sprite" parent="MacaronFond_Magie"]
modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
z_index = 1
texture = ExtResource( 8 )
